# MomentumAI_Revisions

./: .gitignore  .gitmodules  .replit  README.md  create_supabase_users_table.sql  design_guidelines.md  nixpacks.toml  pyproject.toml  replit.md  start.sh
backend/: Procfile  app.py  application.py  auth_config.json  auth_models.py  check_storage_policies.py  cleanup_broken_documents.py  email_service.py  fix_all_documents.py  fix_chunk_document_links.py  fix_storage_rls.py  models.py  replit_auth.py  requirements.txt
backend/.ebextensions/: ffmpeg.config  gunicorn.config  static.config
backend/med_bot3/: .env.example  .gitignore  .replit  BACKUP_RECOVERY.md  DATABASE_ASSESSMENT_REPORT.md  MIGRATION_GUIDE.md  README.md  backup_database.sh  backup_recovery_procedures.py  chatbot.py  check_status.py  create_chunks_via_supabase.py  cursor-changelog.md  fix_chunks_table.py  fix_documents_table.py  fix_embedding_schema.sql  fix_missing_schema.py  fix_rls_issues.py  fix_rls_issues.sql  health_check.py  list_available_tables.py  migrate_embeddings_to_mpnet.py  multi_hop_rag_pipeline.py  optimize_database.py  rag_flashcards.py  rag_pipeline.py  requirements.txt  restore_database.sh  setup_storage_and_db.py  simple_rag_test.py  stt_whisper.py  study_planner.py  test_chunks_table.py  test_db_connection.py  test_supabase_detailed.py  tts_elevenlabs.py  verify_embeddings.py
backend/med_bot3/exam_feature/: exam_generator.py
backend/med_bot3/supabase/: config.toml
client/src/: index.css
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  config.js
(+23 files in other folders)
