[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "MedBot Study Application"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-sqlalchemy>=3.0.0",
    "flask-login>=0.6.0",
    "flask-dance>=7.0.0",
    "google-generativeai>=0.3.0",
    "supabase>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "PyPDF2>=3.0.0",
    "pymupdf>=1.23.0",
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
    "pydantic>=2.0.0",
    "python-docx>=1.0.0",
    "requests>=2.31.0",
    "tiktoken>=0.5.0",
    "PyJWT>=2.8.0",
    "gunicorn>=21.0.0",
    "elevenlabs>=1.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "arcadepy>=1.0.0",
]

[tool.uv]
managed = true
